# pbqff

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  MOPAC Error message.txt  Makefile  README.md  README.org  build.rs  configure  dist-workspace.toml  pyproject.toml  symmetry.org  true.15  true.30  true.40  true.rots
crates/intder/: Cargo.toml  README.md
crates/intder/docs/: main.tex
crates/intder/scripts/: example.f  matrix.awk  translate.pl
crates/intder/src/: geom.rs  hmat.rs  htens.rs  htens4.rs  lib.rs  main.rs
crates/intder/src/htens/: display.rs
crates/intder/testfiles/: c2h2.07  c2h2.15  c2h2.30  c2h2.40  c2h2.freq.in  c2h2.in  c2h4.07  c2h4.in  c3h2.07  c3h2.15  c3h2.30  c3h2.40  c3h2.amat  c3h2.amat.others  c3h2.freq.in  c3h2.full  c3h2.in  c7h2.bbt.iter1  c7h2.bmat  c7h2.bsmat  c7h2.in  c7h2.small.07  c7h2_full.in  full_xyz.in  h2co.07  h2co.15  h2co.30  h2co.40  h2co.freq.in  h2co.in  h2o.15  h2o.30  h2o.amat  h2o.bmat  h2o.bsmat  h2o.final.f3  h2o.freq.in  h2o.in  h2o.lintr.f3  h2o.small.07  (+14 more)
crates/intder/tests/: lib_test.rs
crates/pbqff/: Cargo.toml
crates/pbqff/src/: config.rs  coord_type.rs  main.rs  tests.rs
crates/pbqff/src/config/: coord_type.rs
crates/pbqff/src/coord_type/: cart.rs  findiff.rs  fitted.rs  normal.rs  sic.rs
crates/pbqff/testfiles/: cart.toml  h2o.intder  intder.full  intder.in  mop.tmpl  normal.toml  test.toml
crates/pbqff/tests/: run.rs
crates/pbqff/tests/snapshots/: run__run@testfiles__cart.toml.snap  run__run@testfiles__norm.toml.snap  run__run@testfiles__test.toml.snap
crates/psqs/: Cargo.toml  README.md
crates/psqs/benches/: read_aux.rs  write_input.rs
crates/psqs/src/: geom.rs  lib.rs  program.rs  tests.rs
crates/psqs/src/program/: cfour.rs  dftbplus.rs  molpro.rs  mopac.rs
crates/psqs/src/queue/: drain.rs  local.rs  mod.rs  pbs.rs  slurm.rs
crates/psqs/templates/slurm/: molpro  mopac
crates/psqs/testfiles/: bad.aux  job.aux  job.mop  noaux.out  nojob.out  opt.aux  opt.out
crates/psqs/testfiles/cfour/: MOLDEN  ZMAT  ZMAT.want  charged.want
crates/psqs/testfiles/dftb+/: opt_opt.want  single_opt.want  single_single.want
crates/psqs/testfiles/molpro/: dzccr.out  error.out  ignore_error.out  opt.out  opt.want  single.want
crates/psqs/testfiles/mopac/: multi_atom_el.aux  multi_atom_el.out
crates/spectro/: Cargo.toml  README.md
crates/spectro/benches/: main.rs
crates/spectro/flow/: asym.gv  corrs.gv  rots.gv
crates/spectro/python/: lxm.py  try.org
crates/spectro/scripts/: fermi2.awk  fetch_test  matrix.awk  minus.awk  quartic.pl  specin.pl  specout.pl  states.py  translate.pl  types.pl
crates/spectro/src/: alphas.rs  consts.rs  dummy.rs  enrgy.rs  f3qcm.rs  f4qcm.rs  ifrm1.rs  ifrm2.rs  lib.rs  load.rs  mode.rs  output.rs  polyads.rs  quartic.rs  resonance.rs  rot.rs  rotor.rs  run.rs  sextic.rs  state.rs  tests.rs  utils.rs  xcals.rs
crates/spectro/src/tests/: alphaa.rs  alphas.rs  enrgy.rs  force3.rs  force4.rs  load.rs  lxm.rs  polyads.rs  quartic.rs  restst.rs  rot2nd.rs  run.rs  secular.rs  sextic.rs  steps.rs  xcalc.rs  xcals.rs  zeta.rs
crates/spectro/src/utils/: linalg.rs
crates/spectro/testfiles/: dummy.in  fort.15  fort.30  fort.40  spectro.in
crates/spectro/testfiles/alh/: fort.15  fort.30  fort.40  phis.json  quartic.json  spectro.in  spectro.out  summary.json
crates/spectro/testfiles/allyl/: fort.15  fort.30  fort.40  spectro.in  summary.json
crates/spectro/testfiles/alnco/: fort.15  fort.30  fort.40  fort.41  spectro.in  spectro.out  spectro2.in  spectro2.out  summary.json
crates/spectro/testfiles/bipy/: enrgy  enrgy1  f3qcm  f4qcm  fort.15  fort.30  fort.40  gcnst  gcnst1  harm  lx  lxm  phis.json  quartic.json  rotnst  sextic.json  spectro.in  spectro2.in  spectro2.out  states  summary.json  wila  xcnst  xcnst_dd  xcnst_nd  xcnst_nn  zmat
crates/spectro/testfiles/c-hoco/: fort.15  fort.30  fort.40  spectro.in  spectro2.in  spectro2.out  summary.json
crates/spectro/testfiles/c2h-/: f3qcm  fort.15  fort.30  fort.40  fx  gcnst1  harm  lx  lxm  phis.json  sextic.json  spectro.in  spectro2.in  spectro2.out  step_fxm  summary.json  xcnst_dd  xcnst_nd  xcnst_nn
crates/spectro/testfiles/c2h4/: fort.15  fort.30  fort.40  polyad  spectro.in  spectro2.in  spectro2.out  summary.json
crates/spectro/testfiles/c3h2/: alpha  f3qcm  f4qcm  fort.15  fort.30  fort.40  fx  fxm  harm  lx  lxm  phis.json  quartic.json  sextic.json  spectro.in  spectro2.out  summary.json  wila  xcnst  zmat
crates/spectro/testfiles/c3h3+/: fort.15  fort.30  fort.40  noinf.out  spectro.in  spectro2.in  spectro2.out  states.rs  summary.json
crates/spectro/testfiles/c3hcl/: fort.15  fort.30  fort.40  spectro.in  spectro2.in  spectro2.out  summary.json
crates/spectro/testfiles/c3hcn/: alpha  f3qcm  f4qcm  fort.15  fort.30  fort.40  fort_fxm  fort_lxm  fx  fxm  harm  lx  lxm  phis.json  quartic.json  sextic.json  spectro.in  spectro2.in  spectro2.out  summary.json  wila  xcnst  zmat
crates/spectro/testfiles/c3hcn010/: alpha  fort.15  fort.30  fort.40  fx  fxm  harm  lx  lxm  spectro.in  spectro2.in  spectro2.out  summary.json  wila  zmat
crates/spectro/testfiles/c3hf/: alpha  f3qcm  f4qcm  fort.15  fort.30  fort.40  fort_fxm  fort_lxm  fx  fxm  harm  lx  lxm  phis.json  quartic.json  sextic.json  spectro.in  spectro2.in  spectro2.out  summary.json  wila  xcnst  zmat
crates/spectro/testfiles/c4h3+/: fort.15  fort.30  fort.40  fort.41  fort.51  spectro.in  spectro.out  spectro2.in  spectro2.out  summary.json
crates/spectro/testfiles/d2sc/: fort.40  spectro.in  spectro2.out  summary.json
crates/spectro/testfiles/h2co/: alpha  f3qcm  f4qcm  fort.15  fort.30  fort.40  fx  fxm  harm  lx  lxm  phis.json  quartic.json  sextic.json  spectro.in  spectro2.out  summary.json  wila  xcnst  zmat
(+421 files in other folders)
