[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.88"

[workspace.dependencies]
anpass = { path = "crates/anpass" }
psqs = { path = "crates/psqs" }
symm = { path = "crates/symm" }
intder = { path = "crates/intder" }
spectro = { path = "crates/spectro" }
taylor = { path = "crates/taylor" }

# not really interested in bringing this one over. it's the least-used and
# least-changing, and I should probably just replace its usage with ndarray
# anyway
tensor = { git = "https://github.com/ntBre/tensor" }

anyhow = "1.0.98"
approx = "0.5.1"
assert_cmd = "2.0.17"
clap = { version = "4.5.43", features = ["derive"] }
criterion = "0.5.0"
env_logger = "0.11.8"
insta = { version = "1.43.1", features = ["filters"] }
jiff = { version = "0.2.15" }
libc = "0.2.174"
log = "0.4.27"
nalgebra = "0.33.2"
ndarray = { version = "0.15.6", features = ["approx-0_5"] }
rayon = "1.5.3"
regex = { version = "1.9.1" }
rustc-hash = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.20.0"
test-case = "3.3.1"
toml = "0.8.23"

[profile.test]
opt-level = 3  # mostly for anpass