[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.92"
repository = "https://github.com/ntBre/pbqff"

[workspace.dependencies]
anpass = { path = "crates/anpass" }
psqs = { path = "crates/psqs" }
symm = { path = "crates/symm" }
intder = { path = "crates/intder" }
spectro = { path = "crates/spectro" }
taylor = { path = "crates/taylor" }

# not really interested in bringing this one over. it's the least-used and
# least-changing, and I should probably just replace its usage with ndarray
# anyway
tensor = { git = "https://github.com/ntBre/tensor" }

anyhow = "1.0.100"
approx = "0.5.1"
assert_cmd = "2.1.2"
clap = { version = "4.5.53", features = ["derive"] }
criterion = "0.8.1"
env_logger = "0.11.9"
insta = { version = "1.46.1", features = ["filters"] }
jiff = { version = "0.2.17" }
libc = "0.2.180"
log = "0.4.29"
nalgebra = "0.34.1"
ndarray = { version = "0.15.6", features = ["approx-0_5"] }
rayon = "1.11.0"
regex = { version = "1.12.2" }
rustc-hash = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.24.0"
test-case = "3.3.1"
toml = "0.9.11"

[profile.test]
opt-level = 3  # mostly for anpass

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
