[package]
name = "psqs"
version = "0.1.0"
edition.workspace = true

[dependencies]
symm = { workspace = true }

libc = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
regex = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
tempfile = { workspace = true }
chrono = { workspace = true }
rayon = { workspace = true }
test-case = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
criterion = { workspace = true }
