[package]
name = "spectro"
version = "0.1.0"
edition = "2021"

[dependencies]
log = { workspace = true }
nalgebra = { workspace = true, features = ["serde-serialize"] }
symm = { workspace = true }
tensor = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
approx = { workspace = true }

[[bin]]
name = "prof"

[features]
polyad = []